chore: update package.json and pnpm-lock.yaml to include velite and zod dependencies, and modify build scripts for improved development workflow

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
+        "dev": "velite build && next dev --turbopack",
+        "build": "velite build && next build",
+        "velite": "velite build",
         "start": "next start",
         "lint": "next lint"
     },
@@ -23,7 +24,9 @@
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-icons": "^5.5.0",
-        "tailwind-merge": "^3.3.1"
+        "tailwind-merge": "^3.3.1",
+        "velite": "^0.2.4",
+        "zod": "^4.0.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
