--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-navigation-menu": "^1.2.13",
         "@radix-ui/react-slot": "^1.2.3",
+        "@shikijs/rehype": "^3.8.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.525.0",
@@ -24,6 +25,8 @@
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "react-icons": "^5.5.0",
+        "rehype-pretty-code": "^0.14.1",
+        "shiki": "^3.8.1",
         "tailwind-merge": "^3.3.1",
         "velite": "^0.2.4",
         "zod": "^4.0.5"
