chore: simplify dev script in package.json by removing velite build step

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "velite build && next dev --turbopack",
+        "dev": "next dev --turbopack",
         "build": "velite build && next build",
         "velite": "velite build",
         "start": "next start",
